# active-trace

./: CHANGES.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_crear_tenant.py  002_crear_users_tokens.py  003_crear_rbac.py  004_crear_audit_log_impersonacion.py  005_crear_estructura_academica.py  006_extender_usuario_crear_asignacion.py  007_add_equipos_gestionar.py  008_version_padron_entrada_padron.py  009_crear_calificaciones_umbral.py  010_crear_comunicacion.py  011_encuentros_guardias.py  012_coloquios.py  013_avisos.py  014_tareas.py  015_programas_fechas.py  016_liquidaciones.py  017_auditoria.py  018_mensaje.py
backend/app/: main.py  seed.py
backend/tests/: conftest.py  test_analisis.py  test_app_startup.py  test_asignaciones_api.py  test_audit_log_model.py  test_audit_service.py  test_auditoria.py  test_auth_api.py  test_auth_service.py  test_avisos.py  test_base_repository.py  test_calificaciones.py  test_carreras_api.py  test_cohortes_api.py  test_coloquios.py  test_comunicaciones.py  test_config.py  test_database.py  test_dependencies.py  test_dictados_api.py  test_encryption.py  test_encuentros.py  test_equipos_api.py  test_health.py  test_impersonation.py  test_liquidaciones.py  test_materias_api.py  test_models.py  test_padron_api.py  test_perfil_inbox.py  test_permissions.py  test_programas_fechas.py  test_rbac_models.py  test_require_permission.py  test_security.py  test_tareas.py  test_user_model.py  test_usuarios_api.py
docs/: PRD.md  (+1 more)
(+296 files in other folders)
