[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activia-trace"
version = "0.1.0"
description = "Plataforma de gestión académica y trazabilidad multi-tenant"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "argon2-cffi>=23.1,<24.0",
    "cryptography>=44.0,<45.0",
    "opentelemetry-api>=1.30,<2.0",
    "opentelemetry-sdk>=1.30,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.51,<1.0",
    "httpx>=0.28,<1.0",
    "pyotp>=1.9,<3.0",
    "email-validator>=2.2,<3.0",
    "openpyxl>=3.1,<4.0",
    "python-multipart>=0.0.18,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "pytest-cov>=6.0,<7.0",
    "httpx>=0.28,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "requires_db: Tests that require a running PostgreSQL test database.",
]
